Update library properties

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=PubSubClient(imroy)
+name=PubSubClient(thedanbob)
 version=1.99.1
-author=Nick O'Leary, Ian Tester <imroykun@gmail.com>
-maintainer=Ian Tester <imroykun@gmail.com>
+author=Nick O'Leary, Ian Tester, Dan Arnfield
+maintainer=Dan Arnfield
 sentence=A library for communicating with MQTT brokers.
 paragraph=Supports MQTT 3.1.1.
 category=Communication
-url=https://github.com/Imroy/pubsubclient
+url=https://github.com/thedanbob/pubsubclient
 architectures=*
